# RL-for-Autonomous-Network-Defense-in-SDN

./: pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  version.txt
examples/: petting_zoo_marl_example.py
src/: ade.py  custom_metrics.py  petting_zoo_env.py  run_experiment_config.py  train.py  tune.py  utils.py
src/rl_autonomous_defence/: AutoregressiveActionsModel.py  CheckpointWrapper.py  action_mask_model.py  ade.py  agent_config.py  attacker_action_mask_model.py  attacker_autoregressive_distribution.py  autoregressive_model.py  callbacks.py  custom_metrics.py  defender_action_mask_model.py  defender_autoregressive_distribution.py  fcn_attacker_action_mask_model.py  fcn_defender_action_mask_model.py  gcn_attacker_action_mask_model.py  gcn_defender_action_mask_model.py  policy_config.py  random_policy.py  run_experiment_config.py  test.py  train_config.py  tune.py  tune_experiment.py  utils.py
test/: test_action_mask_model.py  test_callbacks.py  test_utils.py
