
# content of setup.cfg
[metadata]
name = rl_autonomous_defence
version = 0.0.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/
author = Robert Campbell
author_email = robertgcampbell95@gmail.com


[options]
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.8
include_package_data = True
install_requires =
    ray==1.13.0
    tensorflow==2.5.2
    PettingZoo==1.13.1
    dm-tree==0.1.6


[options.packages.find]
where=src

[flake8]
max-line-length = 120
ignore = ANN101
